Fixes menu on smaller screens

--- a/style.css
+++ b/style.css
@@ -174,6 +174,8 @@ nav a {
   opacity: 1;
   height: 150px;
   transition: all 0.2s ease-out;
+  clip: initial;
+  clip-path: initial;
 }
 
 .menu-btn:checked ~ .menu-icon .navicon {
@@ -370,8 +372,8 @@ textarea {
 table {
   margin-bottom: 25px;
   margin-top: 25px;
-    }
-	
+}
+
 .resources {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
@@ -379,14 +381,19 @@ table {
   width: 100%;
 }
 
-.resources td, .resources th {
+.resources td,
+.resources th {
   border: 1px solid #ddd;
   padding: 8px;
 }
 
-.resources tr:nth-child(even){background-color: #f2f2f2;}
+.resources tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
 
-.resources tr:hover {background-color: #ddd;}
+.resources tr:hover {
+  background-color: #ddd;
+}
 
 .resources th {
   padding-top: 12px;
